--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
 
     <link rel="icon" href="/favicon.ico" />
-    <title>React.js Boilerplate</title>
+    <title>Kennel Tracker</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
